fix(table): Remove random horizontal scrollbar

--- a/src/components/years-by-dow-table/years-by-dow-table.module.scss
+++ b/src/components/years-by-dow-table/years-by-dow-table.module.scss
@@ -1,7 +1,6 @@
 @use '../../styles/theme';
 
 .root {
-  overflow-x: scroll;
   width: 100%;
   text-align: center;
   display: flex;
